# agentic-browser

./: Cargo.toml  README.md
docs/plans/: 2026-02-27-agentic-browser-design.md  2026-02-27-agentic-browser-plan.md  2026-02-27-stealth-design.md  2026-02-28-agentic-browser-skill-design.md
examples/: form_fill.rs  google_btc.rs  google_search.rs  screenshot.rs  search_bing.rs  search_ddg.rs  search_google_noproxy.rs  stealth_test.rs  twitter_login.rs
src/: browser.rs  config.rs  element.rs  error.rs  lib.rs  page.rs  stealth.rs
tests/: integration.rs
