[package]
name = "agentic-browser"
version = "0.1.0"
edition = "2021"
description = "A Rust library for agent-driven browser control"

[dependencies]
chromiumoxide = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
